# android-js-engine

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  package.json  settings.gradle
common-js-engine/: build.gradle
common-js-engine/src/main/: AndroidManifest.xml
common-js-engine/src/main/cpp/: Bridge.cpp  Bridge.h  CMakeLists.txt  JSIConvert.cpp  JSIConvert.h  JSLoader.cpp  JSLoader.h  JSLogging.cpp  JSLogging.h  JavaScriptRuntimeHolder.h  OnLoad.cpp
common-js-engine/src/main/cpp/hermes/: CMakeLists.txt  HermesRuntime.h  OnLoad.cpp
common-js-engine/src/main/cpp/jsc/: CMakeLists.txt  JSCRuntime.cpp  JSCRuntimeHolder.h  OnLoad.cpp
common-js-engine/src/main/cpp/jsi/: CMakeLists.txt
common-js-engine/src/main/cpp/jsi/jsi/: jsi.h
common-js-engine/src/main/cpp/v8/: CMakeLists.txt  OnLoad.cpp  V8RuntimeHolder.h
common-js-engine/src/main/java/com/facebook/jni/: CpuCapabilitiesJni.java  IteratorHelper.java  MapIteratorHelper.java
common-js-engine/src/main/java/com/facebook/proguard/annotations/: DoNotStrip.java
common-js-engine/src/main/java/com/jsengine/: Bridge.java  JSCallback.java  JavaScriptRuntime.java
common-js-engine/src/main/java/com/jsengine/hermes/: HermesRuntime.java
common-js-engine/src/main/java/com/jsengine/jsc/: JSCRuntime.java
common-js-engine/src/main/java/com/jsengine/v8/: V8Runtime.java
demo/: build.gradle
demo/src/androidTest/java/com/example/demo/: ExampleInstrumentedTest.java
demo/src/main/: AndroidManifest.xml
demo/src/main/assets/: app.js
demo/src/main/java/com/example/demo/: MainActivity.java
demo/src/main/res/layout/: activity_main.xml  container.xml
demo/src/main/res/values/: themes.xml
demo/src/main/res/values-night/: themes.xml
fbjni/: build.gradle
fbjni-cpp/fb/: CMakeLists.txt  onload.cpp
fbjni-cpp/fb/jni/: ByteBuffer.cpp
fbjni-cpp/fb/jni/java/: UnknownCppException.java
fbjni/src/main/: AndroidManifest.xml
fbjni/src/main/cpp/: CMakeLists.txt
fbjni/src/main/java/com/facebook/jni/: Countable.java  HybridData.java  ThreadScopeSupport.java
fbjni/src/main/java/com/facebook/proguard/annotations/: KeepGettersAndSetters.java
gradle/: publish.gradle
gradle/wrapper/: gradle-wrapper.properties
